Get portfolio section funcitoning with js

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="img/atom_light.svg">
 
+  <!-- Scripts -->
+  <script src="https://cdn.plot.ly/plotly-2.6.3.min.js"></script>
+
 </head>
 
 <body id="page-top">
@@ -121,7 +124,7 @@
   </section>
 
   <!-- Portfolio Section -->
-  <section class="page-section bg-primary text-white mb-0" id="portfolio">
+  <section class="page-section portfolio bg-primary text-white mb-0" id="portfolio">
             <div class="container">
       <!-- About Section Heading -->
       <h2 class="page-section-heading text-center">Portfolio</h2>
@@ -142,47 +145,109 @@
               <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal0">
                   <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                       <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div><img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="Log Cabin"/>
+                  </div><img class="img-fluid" src="img/cake.png" alt="Tasty Cake"/>
               </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-5">
               <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
                   <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                       <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div><img class="img-fluid" src="assets/img/portfolio/cake.png" alt="Tasty Cake"/>
+                  </div><img class="img-fluid" src="img/cake.png" alt="Tasty Cake"/>
               </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-5">
               <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
                   <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                       <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div><img class="img-fluid" src="assets/img/portfolio/circus.png" alt="Circus Tent"/>
-              </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5">
-              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
-                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div><img class="img-fluid" src="assets/img/portfolio/game.png" alt="Controller"/>
-              </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5">
-              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
-                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div><img class="img-fluid" src="assets/img/portfolio/safe.png" alt="Locked Safe"/>
-              </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5">
-              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
-                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div><img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="Submarine"/>
+                  </div><img class="img-fluid" src="img/cake.png" alt="Tasty Cake"/>
               </div>
           </div>
       </div>
 	</div>
 </section>
+
+<!-- Portfolio Modal-->
+<div class="portfolio-modal modal fade" id="portfolioModal0" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal0Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
+            <div class="modal-body text-center">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <!-- Portfolio Modal - Title-->
+                            <h2 class="portfolio-modal-title text-secondary mb-0">Log Cabin</h2>
+                            <!-- Icon Divider-->
+                            <div class="divider-custom">
+                                <div class="divider-custom-line"></div>
+                                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                <div class="divider-custom-line"></div>
+                            </div>
+                            <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="Log Cabin"/>
+                            <!-- Portfolio Modal - Text-->
+                            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                            <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal1Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
+            <div class="modal-body text-center">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <!-- Portfolio Modal - Title-->
+                            <h2 class="portfolio-modal-title text-secondary mb-0">Tasty Cake</h2>
+                            <!-- Icon Divider-->
+                            <div class="divider-custom">
+                                <div class="divider-custom-line"></div>
+                                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                <div class="divider-custom-line"></div>
+                            </div>
+                            <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="Tasty Cake"/>
+                            <!-- Portfolio Modal - Text-->
+                            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                            <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
+            <div class="modal-body text-center">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <!-- Portfolio Modal - Title-->
+                            <h2 class="portfolio-modal-title text-secondary mb-0">Circus Tent</h2>
+                            <!-- Icon Divider-->
+                            <div class="divider-custom">
+                                <div class="divider-custom-line"></div>
+                                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                <div class="divider-custom-line"></div>
+                            </div>
+                            <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="Circus Tent"/>
+                            <!-- Portfolio Modal - Text-->
+                            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                            <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
   <!-- Contact Section -->
 	<section class="page-section portfolio" id="contact">
@@ -263,18 +328,21 @@
   </div>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="/vendor/jquery/jquery.min.js"></script>
-  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Contact Form JavaScript -->
-  <script src="/js/jqBootstrapValidation.js"></script>
-  <script src="/js/contact_me.js"></script>
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="/js/freelancer.min.js"></script>
+  <script src="js/freelancer.min.js"></script>
+
+  <!-- Load simulation -->
+  <script src="js/particles.js"></script>
 
 </body>
 
