Configure potfolio and particles to play nice

--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
   <section class="page-section portfolio bg-primary text-white mb-0" id="portfolio">
             <div class="container">
       <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center">Portfolio</h2>
+      <h2 class="page-section-heading text-center text-white">Portfolio</h2>
 
       <!-- Icon Divider -->
-      <div class="divider-custom">
+      <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <img height=60px src="img/atom.svg">
+          <img height=60px src="img/atom_white.svg">
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -141,11 +141,20 @@
 			<!-- Portfolio Grid Items-->
       <div class="row justify-content-center">
           <!-- Portfolio Items-->
+          <!--
           <div class="col-md-6 col-lg-4 mb-5">
               <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal0">
                   <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                       <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div><img class="img-fluid" src="img/cake.png" alt="Tasty Cake"/>
+                  </div><div id="simulation"></div>
+              </div>
+          </div>
+          -->
+          <div class="col-md-6 col-lg-4 mb-5">
+              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal0">
+                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                  </div><div id="simulation" style="width:350px;height:253px;"></div>
               </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-5">
