Slideshow in portfolio with placeholders

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <!-- Theme CSS -->
   <link href="css/freelancer.css" rel="stylesheet">
+  <link href="css/stage.css" rel="stylesheet">
 
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="img/atom_light.svg">
@@ -161,7 +162,11 @@
               <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
                   <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                       <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div><img class="img-fluid" src="img/cake.png" alt="Tasty Cake"/>
+                  </div>
+                  <div id="stage">
+                    <a><img src="img/1.jpg" width="350" height="253"></a>
+                    <a><img src="img/2.jpg" width="350" height="253"></a>
+                  </div>
               </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-5">
@@ -350,8 +355,9 @@
   <!-- Custom scripts for this template -->
   <script src="js/freelancer.min.js"></script>
 
-  <!-- Load simulation -->
+  <!-- Load simulation and slide scripts -->
   <script src="js/particles.js"></script>
+  <script src="js/slide.js"></script>
 
 </body>
 
