Filling out images and copy

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <section class="page-section portfolio bg-primary text-white mb-0" id="portfolio">
             <div class="container">
       <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center text-white">Portfolio</h2>
+      <h2 class="page-section-heading text-center text-white">Research</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -164,8 +164,8 @@
                       <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                   </div>
                   <div id="stage">
-                    <a><img src="img/1.jpg" width="350" height="253"></a>
-                    <a><img src="img/2.jpg" width="350" height="253"></a>
+                    <a><img src="img/628.png" width="350" height="253"></a>
+                    <a><img src="img/585.png" width="350" height="253"></a>
                   </div>
               </div>
           </div>
@@ -173,7 +173,7 @@
               <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
                   <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                       <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div><img class="img-fluid" src="img/cake.png" alt="Tasty Cake"/>
+                  </div><img class="img-fluid" src="img/chip_pic_web.png"/>
               </div>
           </div>
       </div>
@@ -190,16 +190,17 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
                             <!-- Portfolio Modal - Title-->
-                            <h2 class="portfolio-modal-title text-secondary mb-0">Log Cabin</h2>
+                            <h2 class="portfolio-modal-title text-secondary mb-0">Simulation</h2>
                             <!-- Icon Divider-->
                             <div class="divider-custom">
-                                <div class="divider-custom-line"></div>
-                                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                <div class="divider-custom-line"></div>
+                              <div class="divider-custom-line"></div>
+                              <div class="divider-custom-icon">
+                                <img height=60px src="img/atom.svg">
+                              </div>
+                              <div class="divider-custom-line"></div>
                             </div>
-                            <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="Log Cabin"/>
                             <!-- Portfolio Modal - Text-->
-                            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                            <p class="mb-5">This animation shows a simulation of atoms moving through an anharmonic potential. It is a simplified version of a full Python simulation that was used as part of my PhD.</p>
                             <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                         </div>
                     </div>
@@ -217,16 +218,18 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
                             <!-- Portfolio Modal - Title-->
-                            <h2 class="portfolio-modal-title text-secondary mb-0">Tasty Cake</h2>
+                            <h2 class="portfolio-modal-title text-secondary mb-0">Optics</h2>
                             <!-- Icon Divider-->
                             <div class="divider-custom">
-                                <div class="divider-custom-line"></div>
-                                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                <div class="divider-custom-line"></div>
+                              <div class="divider-custom-line"></div>
+                              <div class="divider-custom-icon">
+                                <img height=60px src="img/atom.svg">
+                              </div>
+                              <div class="divider-custom-line"></div>
                             </div>
-                            <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="Tasty Cake"/>
                             <!-- Portfolio Modal - Text-->
-                            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                            <p class="mb-5">Examples of optical systems at
+                            Imperial College London</p>
                             <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                         </div>
                     </div>
@@ -244,16 +247,17 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
                             <!-- Portfolio Modal - Title-->
-                            <h2 class="portfolio-modal-title text-secondary mb-0">Circus Tent</h2>
+                            <h2 class="portfolio-modal-title text-secondary mb-0">Microfabrication</h2>
                             <!-- Icon Divider-->
                             <div class="divider-custom">
-                                <div class="divider-custom-line"></div>
-                                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                <div class="divider-custom-line"></div>
+                              <div class="divider-custom-line"></div>
+                              <div class="divider-custom-icon">
+                                <img height=60px src="img/atom.svg">
+                              </div>
+                              <div class="divider-custom-line"></div>
                             </div>
-                            <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="Circus Tent"/>
                             <!-- Portfolio Modal - Text-->
-                            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                            <p class="mb-5">A microfabricated chip trap mounted on a vacuum flange.</p>
                             <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                         </div>
                     </div>
