Hide overlay on chip photo

--- a/index.html
+++ b/index.html
@@ -154,14 +154,12 @@
           <div class="col-md-6 col-lg-4 mb-5">
               <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal0">
                   <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                   </div><div id="simulation" style="width:350px;height:253px;"></div>
               </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-5">
               <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
                   <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                   </div>
                   <div id="stage">
                     <a><img src="img/628.png" width="350" height="253"></a>
@@ -172,8 +170,10 @@
           <div class="col-md-6 col-lg-4 mb-5">
               <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
                   <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div><img class="img-fluid" src="img/chip_pic_web.png"/>
+                  </div>
+                  <div id="stage"> <!-- this id a bit of a hack to stop overlay apperaing -->
+                    <a><img src="img/chip_pic_web.png" width="350" height="253"></a>
+                  </div>
               </div>
           </div>
       </div>
