Update main copy

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">PhD Student in Physics</p>
+      <p class="masthead-subheading font-weight-light mb-0">Researcher in quantum atomic and photonic physics</p>
 
     </div>
   </header>
@@ -100,17 +100,19 @@
         <div class="col-lg-4 ml-auto lead">
            Experience:
            <ul>
-            <li>Quantum optics and chemistry</li>
+            <li>Quantum optics</li>
+            <li>Atomic physics</li>
             <li>Laser science</li>
             <li>Python, Mathematica</li>
-            <li>Microfabrication</li>
+            <li>Device fabrication</li>
           </ul>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">I am a PhD student in <a
-             href="https://www.imperial.ac.uk/centre-for-cold-matter/">the Centre
-             for Cold Matter</a> at Imperial College London. My research focuses
-           on the design of microscopic traps for ultracold molecules.</p>
+          <p class="lead">I am a researcher in <a
+             href="https://www.bath.ac.uk/research-centres/centre-for-photonics-and-photonic-materials/">the Centre
+             for Photonics and Photonic Materials</a> at the University of
+           Bath. I am building new fibre optic devices for quantum
+           technologies.</p>
         </div>
       </div>
 
