Two photon absorption image

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                   <div id="stage">
                     <a><img src="img/628.png" width="350" height="253"></a>
                     <a><img src="img/585.png" width="350" height="253"></a>
+                    <a><img src="img/2pa.png" width="350" height="253"></a>
                   </div>
               </div>
           </div>
@@ -231,7 +232,7 @@
                             </div>
                             <!-- Portfolio Modal - Text-->
                             <p class="mb-5">Examples of optical systems at
-                            Imperial College London</p>
+                            Imperial College London and the University of Bath</p>
                             <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                         </div>
                     </div>
