--- a/cv.html
+++ b/cv.html
@@ -78,7 +78,8 @@
 
       <div class="text-center mt-4">
         This CV was generated with my LaTeX CV class, <a
-        class="text-secondary" href="https://github.com/mcgarc/Resumay">Resumay</a>.
+        class="text-secondary"
+        href="https://github.com/mcgarc/Resumay">Resumay</a>.
       </div>
 
     </div>
@@ -115,10 +116,6 @@
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-  <!-- Contact Form JavaScript -->
-  <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/freelancer.min.js"></script>
