Add link to PhD thesis

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                               <div class="divider-custom-line"></div>
                             </div>
                             <!-- Portfolio Modal - Text-->
-                            <p class="mb-5">A microfabricated chip trap mounted on a vacuum flange.</p>
+                            <p class="mb-5">A microfabricated chip trap for cold molecules, mounted on a vacuum flange. The molecule chip is the subject of my <a href="files/McGarry-C-2023-PhD-Thesis.pdf">PhD thesis</a></p>
                             <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                         </div>
                     </div>
