--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
                   <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                   </div>
-                  <div id="stage"> <!-- this id a bit of a hack to stop overlay apperaing -->
+                  <div> <!-- this id a bit of a hack to stop overlay apperaing -->
                     <a><img src="img/chip_pic_web.png" width="350" height="253"></a>
                   </div>
               </div>
