Add hidden research link for later

--- a/index.html
+++ b/index.html
@@ -141,6 +141,16 @@
         <div class="divider-custom-line"></div>
       </div>
 
+      <!-- Research Section Button -->
+      <!--
+        Uncomment for research output button
+      <div class="text-center mt-4" style="margin-bottom:2cm;">
+        <a class="btn btn-xl btn-outline-secondary" href="research.html">
+          View my research output
+        </a>
+      </div>
+      -->
+
 			<!-- Portfolio Grid Items-->
       <div class="row justify-content-center">
           <!-- Portfolio Items-->
